# raylib-cpp-cmake-template

./: CMakeLists.txt  Justfile  README.md
assets/: world.ldtk
assets/dinoCharactersVersion1.1/: changelog.txt
assets/dinoCharactersVersion1.1/aseprite/: DinoSprites.ase  dinoCharacters-display.ase
sources/: Constants.hpp  main.cpp  minshell.html
sources/entities/: BaseEntity.hpp
sources/entities/Player/: Player.cpp  Player.hpp
sources/entities/Portal/: Portal.hpp  PortalData.hpp
sources/physics/: PhysicsTypes.hpp  RaycastUtils.hpp
sources/scenes/: BaseScene.hpp  SceneManager.hpp  Scenes.hpp
sources/scenes/GameScene/: GameScene.cpp  GameScene.hpp
sources/scenes/TitleScene/: TitleScene.cpp  TitleScene.hpp
sources/utils/: Camera.hpp  DebugUtils.hpp
